2004-02-15  Derek Price  <derek@ximbiot.com>

	Make error() accessible to the GNULIB functions.

	* error.h: Move into the ../lib directory.

2004-02-13  Derek Price  <derek@ximbiot.com>

	* lock.c (Reader_Lock, lock_dir_for_write): Plug memory leaks.
	(Report from Mark D. Baushke <mdb@cvshome.org>.)

2004-02-13  Derek Price  <derek@ximbiot.com>

	* lock.c (remove_lock_files): Minor refactoring.

2004-02-12  Mark D. Baushke  <mdb@cvshome.org>

	* lock.c (lock_exists): Plug a memory leak.

2004-02-12  Derek Price  <derek@ximbiot.com>

	* modules.c: Reformat comment and line to fit in 80 chars.

2004-02-12  Mark D. Baushke  <mdb@cvshome.org>

	* server.c (do_cvs_command): Plug a memory leak.
	(Use buf_free() rather than free().)
	
2004-02-12  Derek Price  <derek@ximbiot.com>

	* sanity.sh (lockfiles): Reformat a comment for 80 characters.  Fix a
	few minor issues that caused tests to fail in remote mode.  Clean up
	after test.

2004-02-12  Derek Price  <derek@ximbiot.com>

	* lock.c (unlock_proc): Don't expect an int in closure as it is not
	condoned in the C standard.  For now, just assume zero since this
	function is currently only called from one location.
	(remove_locks): Pass NULL for the closure argument to unlock_proc().

2004-02-12  Derek Price  <derek@ximbiot.com>

	* lock.c (unlock_proc): Use closure as true/false free_repository
	free_repository argument to remove_lock_files.  Move to a position
	above remove_locks and delete prototype.
	(remove_locks): Don't free storage, as specified in our header comment,
	in order to avoid a seg fault that could otherwise occur after waiting
	on a lock.
	* sanity.sh (lockfiles): Add tests for all operation (read, read
	promotably, or write) and lock combinations.
	(Original report from Mark <cm_mark@yahoo.com>.)

2004-02-12  Larry Jones  <lawrence.jones@ugsplm.com>

	* modules.c (_do_module): Rename to my_module to avoid reserved name.
	* stack.c (_push, _pop, _unshift, _shift): Rename to do_*.
