@@ -776,7 +776,7 @@ log_fileproc (void *callerdat, struct file_info *finfo)
     int selrev = -1;
     RCSNode *rcsfile;
     char buf[50];
-    struct revlist *revlist;
+    struct revlist *revlist = NULL;
     struct log_data_and_rcs log_data_and_rcs;
 
     if ((rcsfile = finfo->rcs) == NULL)
@@ -830,7 +830,11 @@ log_fileproc (void *callerdat, struct file_info *finfo)
 
 	    selrev = walklist (rcsfile->versions, log_count_print,
 			       (void *) &log_data_and_rcs);
-	    if (log_data->sup_header && selrev == 0) return 0;
+	    if (log_data->sup_header && selrev == 0)
+	    {
+		log_free_revlist (revlist);
+		return 0;
+	    }
 	}
 
     }
@@ -839,6 +843,7 @@ log_fileproc (void *callerdat, struct file_info *finfo)
     {
 	cvs_output (rcsfile->path, 0);
 	cvs_output ("\n", 1);
+	log_free_revlist (revlist);
 	return 0;
     }
 
